# tepra

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  .gitleaksignore  .octocov.yml  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  dprint.jsonc  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  sgconfig.yml
.claude/skills/cc-plugin-daisyui--daisyui/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
.claude/skills/project-conventions/references/: module-and-project-structure.md  testing-patterns.md
.devcontainer/: devcontainer.json  gen_mcp_json.py  initializeCommand.sh  o2-env.sh  o2-import-dashboards.sh  postStartCommand.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/: codeql-config.yml  labeler.yml  project-config.json  release-manager-pr-template.md  release.yml
.github/actions/act-actionlint/: action.yaml
.github/actions/act-audit/: action.yaml
.github/actions/act-cleanup/: action.yaml
.github/actions/act-codeql/: action.yaml
.github/actions/act-docs-ci/: action.yaml
.github/actions/act-prebuild-container/: action.yaml
.github/actions/act-setup-rust/: action.yaml
.github/actions/upload-release-assets/: action.yaml
.github/graft/: config.yaml  schema.json
.github/workflows/: _orchestrator.yaml  cleanup.yaml  miri.yaml  pr-labeler.yaml  release-manager.yaml  release.yaml  rust-ci.yaml
.mise/: config.devcontainer.toml  overrides.toml  tasks.toml
ast-rules/: _rules.md  error-context-required.yml  module-size-limit.yml  no-blocking-in-async.yml  no-get-prefix.yml  no-hardcoded-credentials.yml  no-real-asn.yml  no-real-fqdn.yml  no-real-ipv4.yml  no-real-ipv6.yml  secure-random-required.yml
crates/brust/: Cargo.toml  build.rs
crates/brust/src/: libs.rs  main.rs
crates/brust/src/libs/: count.rs  hello.rs  http.rs
crates/brust/src/telemetry/: conventions.rs
crates/brust/src/telemetry/metrics/: mod.rs  process.rs
crates/brust/tests/: integration_test.rs
crates/tepra/: Cargo.toml
crates/tepra-api/: Cargo.toml
crates/tepra-api/src/: lib.rs  router.rs  state.rs  templates.rs  views.rs
crates/tepra-api/src/actor/: job.rs  mod.rs  printer.rs
crates/tepra-api/src/handlers/: jobs.rs  mod.rs  templates.rs  views.rs
crates/tepra-api/templates/: index.html  job_card.html  printer_detail.html
crates/tepra-api/tests/: actor_cancel.rs  actor_queue.rs  askama_render.rs  handlers_jobs.rs  handlers_templates.rs  htmx_polling.rs  smoke.rs  views_integration.rs
crates/tepra-api/tests/snapshots/: askama_render__index_empty.snap  askama_render__index_two_printers.snap  askama_render__printer_detail_offline.snap  askama_render__printer_detail_online.snap
crates/tepra-core/: Cargo.toml  build.rs
crates/tepra-core/src/: error.rs  lib.rs
crates/tepra-core/src/client/: mock.rs  mod.rs  reqwest_client.rs  traits.rs
crates/tepra-core/src/dto/: enums.rs  error.rs  job.rs  mod.rs  printer.rs  tape_label.rs  template.rs
crates/tepra-core/src/otel/: conventions.rs  logger.rs  meter.rs  mod.rs  resource.rs  tracer.rs
crates/tepra-core/src/otel/metrics/: mod.rs
crates/tepra-core/tests/: client_otel.rs  client_span_name.rs  dto_roundtrip.rs  init_otlp.rs  otel_http_client_semconv.rs  otel_http_client_smoke.rs  otel_process_metrics.rs  reqwest_errors.rs  reqwest_get.rs  reqwest_post.rs
crates/tepra-core/tests/fixtures/dto/: autoselect_res.json  error_res.json  get_margin_no_template_req.json  get_margin_req.json  get_margin_res.json  import_frame_req.json  import_frame_res.json  job_control_req.json  job_progress_res.json  lw_status_no_opt_res.json  lw_status_res.json  online_status_res.json  print_req.json  print_res.json  printer_info_res.json  printer_list_res.json  version_res.json
crates/tepra-web/: Cargo.toml  build.rs
crates/tepra-web/src/: assets.rs  cli.rs  config.rs  lib.rs  main.rs  trace.rs
crates/tepra-web/tests/: build_env.rs  cli_parse.rs  handler_instrument.rs  otel_server_5xx_set_status.rs  otel_server_client_address.rs  otel_server_metric_method_route.rs  otel_server_request_duration.rs  otel_server_span_attrs.rs  otel_traceparent_extract.rs  trace_layer.rs
crates/tepra/src/: router.rs  state.rs  templates.rs  views.rs
crates/tepra/src/actor/: printer.rs
crates/tepra/src/handlers/: jobs.rs  mod.rs  openapi.rs  printers.rs  templates.rs  views.rs
crates/tepra/templates/components/: breadcrumbs.html  sidebar.html  theme_toggle.html
crates/tepra/templates/pages/: api.html  index.html  printer_detail.html
crates/tepra/templates/partials/: job_card.html  printer_status_card.html  property_table.html  try_it_out.html
crates/tepra/templates/shells/: dashboard.html
crates/tepra/tests/: actor_span_propagation.rs  askama_render.rs  handlers_api_docs.rs  handlers_openapi.rs  handlers_status_card.rs  htmx_polling.rs  views_integration.rs
crates/tepra/tests/snapshots/: askama_render__api_docs_empty.snap  askama_render__api_docs_two_endpoints.snap  askama_render__index_empty.snap  askama_render__index_two_printers.snap  askama_render__job_card_canceled.snap  askama_render__job_card_completed.snap  askama_render__job_card_in_progress.snap  askama_render__printer_detail_offline.snap  askama_render__printer_detail_online.snap
docs/: development.md
docs/adr/latest/: 0001-split-tepra-api-into-three-crates.md  0002-per-printer-single-worker-queue.md  0003-server-rendered-ui-with-askama-and-htmx.md  0006-http-observability-with-tower-http-tracelayer.md  0008-tepra-api-client-otel-manual-buffer.md  0009-tepra-web-config-file-discovery.md  0010-openapi-schema-derivation-in-core-behind-feature-gate.md
docs/specs/architecture/: otel-instrumentation.md  pwa-asset-pipeline.md
docs/specs/components/: askama-templates.md  release-manager.md  tepra-core-tepra-client.md  tepra-router.md  tepra-web-cli.md
