# - -------------------------------------------------------------------------------------------------
# - Package
# -
[package]
name = "brust"
version.workspace = true
categories = ["command-line-utilities"]
edition.workspace = true
keywords = ["cli", "tool"]
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "A CLI tool built following project rules standards"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"

# - -------------------------------------------------------------------------------------------------
# - Features
# -
[features]
default = ["otel", "process-metrics"]
otel = [
	"dep:gethostname",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
	"dep:opentelemetry-appender-tracing",
	"dep:opentelemetry-semantic-conventions",
]
# Default-on. Collects OTel-semconv process metrics for the running process.
# Requires the `otel` feature. Can be disabled with --no-default-features.
process-metrics = [
	"otel",
	"dep:sysinfo",
]

# - -------------------------------------------------------------------------------------------------
# - Dependencies
# -
[dependencies]
# Core
anyhow.workspace = true
clap.workspace = true

# Data
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true

# Random
rand.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# System info (optional, behind `process-metrics` feature)
sysinfo = { workspace = true, optional = true }

# OpenTelemetry semantic conventions (optional, behind `process-metrics` feature)
opentelemetry-semantic-conventions = { workspace = true, optional = true }

# Hostname (optional, behind `otel` feature)
gethostname = { workspace = true, optional = true }

# OpenTelemetry (optional, behind `otel` feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# - -------------------------------------------------------------------------------------------------
# - Dev Dependencies
# -
[dev-dependencies]
assert_cmd.workspace = true
opentelemetry_sdk = { workspace = true, features = ["testing"] }
predicates.workspace = true
tempfile.workspace = true
tracing-mock.workspace = true

# - -------------------------------------------------------------------------------------------------
# - Lints
# -
[lints]
workspace = true
