[package]
name = "tepra-web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[[bin]]
name = "tepra"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
rust-embed = { workspace = true }
tepra = { workspace = true }
tepra-core = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
walkdir = "2"

[dev-dependencies]
assert_cmd = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
predicates = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
