[package]
name = "tepra"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tepra-core = { path = "../tepra-core", features = ["schema"] }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
insta = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
